刘洋添加pinyin以及部分代码

--- a/res/layout/chat_input_field.xml
+++ b/res/layout/chat_input_field.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -16,44 +16,65 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:layout_weight="0.2"
-            android:gravity="center" >
+            android:layout_weight="0.15"
+            android:gravity="bottom|center_horizontal" >
 
             <TextView
-                android:id="@id/chat_record_btn"
+                android:id="@+id/add_record"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/chat_input_voice_btn_style"
-                android:onClick="OnClick" />
+                android:background="@drawable/chat_input_voice_btn_style" 
+                android:layout_marginBottom="9dp"/>
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:layout_weight="0.6"
-            android:gravity="center" >
-
-            <EditText
-                android:id="@id/chat_input_field"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/chat_textview_bg"
-                android:inputType="textMultiLine|text" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.2"
-            android:gravity="center" >
+            android:layout_weight="0.15"
+            android:gravity="bottom|center_horizontal" >
 
             <TextView
-                android:id="@id/chat_add_btn"
+                android:id="@+id/add_extras"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/chat_input_add_btn_style"
                 android:clickable="true"
-                android:onClick="OnClick" />
+                android:layout_marginBottom="9dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.55"
+            android:gravity="bottom|center_horizontal" >
+
+            <EditText
+                android:id="@+id/input_field"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:maxHeight="90dp"
+                android:background="@drawable/chat_textview_bg"
+                android:inputType="textMultiLine|text"
+                android:textColor="#000000" 
+                android:layout_marginBottom="10dp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.2"
+            android:gravity="bottom|center_horizontal" >
+
+            <TextView
+                android:id="@+id/chat_send"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:text="发送" 
+                android:padding="6dp"
+                android:gravity="center"
+                android:background="@drawable/button_small_white_style"
+                android:layout_marginBottom="11dp"/>
         </RelativeLayout>
         <!--
                  <TextView
