--- a/res/layout/friend_item.xml
+++ b/res/layout/friend_item.xml
@@ -6,19 +6,16 @@
     android:layout_height="wrap_content"
     android:background="@anim/list_bg_selector" >
 
-    <RelativeLayout
-        android:id="@+id/friendlink_lay1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5.0dip"
-        android:layout_marginRight="5.0dip" >
+<TextView  android:id="@+id/contactitem_catalog" android:paddingRight="4.0dip" android:layout_height="wrap_content" style="@style/MMListCatalog" />
 
         <RelativeLayout
+            android:layout_below="@id/contactitem_catalog"
             android:id="@+id/friendlink_lay"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true" >
+            
+            android:padding="5dp">
 
             <FrameLayout
                 android:id="@+id/image"
@@ -32,15 +29,10 @@
                     android:layout_width="70.0dip"
                     android:layout_height="70.0dip"
                     android:layout_gravity="center"
-                    android:scaleType="fitXY" />
-
-                <ImageView
-                    android:id="@+id/app_icon_back"
-                    android:layout_width="70.0dip"
-                    android:layout_height="70.0dip"
-                    android:layout_gravity="center"
-                    android:background="@drawable/img_home_small_side"
-                    android:scaleType="centerInside" />
+                    android:scaleType="fitXY" 
+					android:src="@drawable/default_avatar"/>
+              
+                    
             </FrameLayout>
 
             <TextView
@@ -55,9 +47,25 @@
                 android:text="用户名"
                 android:textColor="#ff333333"
                 android:textSize="16.0sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+              
+	    		android:drawablePadding="2dp" />
+             <!--  android:drawableRight="@drawable/male_icon" -->
+            <TextView 
+			    android:layout_below="@id/friend_name" 
+			    android:id="@id/distance_textview"
+			    android:layout_width="wrap_content"
+			    android:layout_height="30dp"
+			    android:text="这是个性签名..."
+			    android:gravity="left"
+			    android:layout_marginTop="10dp"
+			    android:layout_alignBottom="@id/list_item_icon"
+			    android:layout_toRightOf="@id/image"
+			    style="@style/list_item_time"
+			    android:layout_marginLeft="10dp"/>
+            
         </RelativeLayout>
-    </RelativeLayout>
+    
 
 </RelativeLayout>
 
