--- a/res/layout/activity_chat.xml
+++ b/res/layout/activity_chat.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/chatting_bg_default" >
+    android:background="@drawable/chatroom_bg" >
 
         <LinearLayout
         android:layout_width="fill_parent"
@@ -21,7 +21,7 @@
         android:id="@+id/rl_layout"
         android:layout_width="fill_parent"
         android:layout_height="45dp"
-        android:background="@drawable/title_bar"
+        android:background="@drawable/actionbar_bg"
         android:gravity="center_vertical" >
 
         <Button
@@ -56,54 +56,13 @@
     </RelativeLayout>
 
     <!-- 底部按钮以及 编辑框 -->
-    <RelativeLayout
-        android:id="@+id/rl_bottom"
+        <include
+        android:id="@id/chat_input_field"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@drawable/chat_footer_bg" >
-
-        <ImageView
-            android:id="@+id/ivPopUp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dip"
-            android:src="@drawable/chatting_setmode_msg_btn" />
-
-        <RelativeLayout
-            android:id="@+id/btn_bottom"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/ivPopUp" >
-
-            <Button
-                android:id="@+id/btn_send"
-                android:layout_width="60dp"
-                android:layout_height="40dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/chat_send_btn"
-                android:text="发送" />
-
-            <EditText
-                android:id="@+id/et_sendmessage"
-                android:textColor="#000000"
-                android:layout_width="fill_parent"
-                android:layout_height="40dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_toLeftOf="@id/btn_send"
-                android:background="@drawable/login_edit_normal"
-                android:singleLine="true"
-                android:textSize="18sp" />
-        </RelativeLayout>
-
+        layout="@layout/chat_input_field" 
+        />
         <TextView
             android:id="@+id/btn_rcd"
             android:layout_width="fill_parent"
@@ -117,21 +76,19 @@
             android:gravity="center"
             android:text="按住说话"
             android:visibility="gone" />
-    </RelativeLayout>
-    
+
     <!-- 聊天内容 listview -->
     <ListView
         android:id="@+id/listview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@id/rl_bottom"
+        android:layout_above="@id/chat_input_field"
         android:layout_below="@id/rl_layout"
         android:cacheColorHint="#0000"
         android:divider="@null"
         android:dividerHeight="5dp"
         android:scrollbarStyle="outsideOverlay"
         android:stackFromBottom="true" />
-    
     <!-- 录音显示UI层 
     <LinearLayout
         android:id="@+id/rcChat_popup"
