--- a/res/layout/fragment_question.xml
+++ b/res/layout/fragment_question.xml
@@ -8,7 +8,7 @@
         <RelativeLayout android:paddingBottom="50.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
             
             <RelativeLayout android:id="@+id/accountLay" android:background="@anim/shape_rounded_rectangle" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="11.0dip" android:layout_marginRight="10.0dip">
-                <ImageView android:id="@+id/photo" android:background="@drawable/actionbar_icon" android:layout_width="64.0dip" android:layout_height="64.0dip" android:layout_marginLeft="25.0dip" android:layout_centerVertical="true" />
+                <ImageView android:id="@+id/photo" android:src="@drawable/actionbar_icon" android:layout_width="64.0dip" android:layout_height="64.0dip" android:layout_marginLeft="25.0dip" android:layout_centerVertical="true" />
                 <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="#ff333333" android:id="@+id/userName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="29.0dip" android:layout_marginTop="10.0dip" android:text="" android:layout_toRightOf="@id/photo" />
                 <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff333333" android:id="@+id/uid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="29.0dip" android:layout_marginTop="5.0dip" android:text="(UID:)" android:layout_toRightOf="@id/photo" android:layout_below="@id/userName" />
                 <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="#ff707070" android:id="@+id/member" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="29.0dip" android:layout_marginTop="5.0dip" android:text="这货暂时还没有个性签名：" android:layout_toRightOf="@id/photo" android:layout_below="@id/uid" />
@@ -29,7 +29,7 @@
                 android:onClick="myOnclick"
                     android:clickable="true" 
                 android:id="@+id/accountSetting" android:background="@anim/shape_rounded_rectangle" android:paddingBottom="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="9.0dip" android:layout_marginRight="10.0dip" android:layout_below="@+id/myAcccountLoginAndRegistLayout">
-                <RelativeLayout android:id="@+id/laySet"  android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" >
+                <RelativeLayout android:id="@+id/laySet" android:clickable="true" android:layout_width="fill_parent" android:layout_height="35.0dip" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" >
                     <TextView android:textSize="13.0sp" android:textStyle="bold" android:textColor="#ff333333" android:id="@+id/set" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:text="设置" android:layout_centerVertical="true" />
                     <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="18.0dip" android:src="@drawable/triangle" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                 </RelativeLayout>
