--- a/res/layout/friend_search.xml
+++ b/res/layout/friend_search.xml
@@ -3,12 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" 
-    android:background="#EFEFF4"
+    android:background="@color/BackgroundGrayColor"
     android:paddingTop="10dp"
     android:paddingLeft="5dp"
     android:paddingRight="5dp">
     
-	<TextView  android:layout_marginBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="搜索用户名添加好友" style="@style/text_style_big_black"/>
+	<TextView  android:layout_marginBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="搜索用户名添加好友" style="@style/text_style_big_gray" android:textColor="@color/TextColorGray"/>
 	
 	
 	 <RelativeLayout android:id="@id/search_box_layout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
