--- a/res/layout/home_list_item.xml
+++ b/res/layout/home_list_item.xml
@@ -1,43 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="10dp"
-    android:orientation="horizontal" >
+    android:padding="5dp"
+    android:gravity="center_vertical|top">
 
-    <ImageView
+    <scu.android.ui.CircularImage
         android:id="@id/list_item_icon"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_weight="0.2"
-        android:src="@drawable/logo" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/default_avatar"
+        android:scaleType="fitCenter" />
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.8"
-        android:orientation="vertical" >
+ 		android:layout_toRightOf="@id/list_item_icon"
+        android:orientation="vertical" 
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="20dp"
-            android:orientation="horizontal" >
+            android:layout_height="wrap_content"
+            >
 
             <TextView
                 android:id="@id/list_item_name"
                 style="@style/list_item_name_text_style"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="0.5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="好友消息" />
 
             <TextView
+               
                 style="@style/list_item_time"
-                android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="0.5"
-                android:text="2014-3-2 15:30:27" />
-        </LinearLayout>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1小时前" 
+                android:layout_alignParentRight="true"
+                />
+        </RelativeLayout>
 
         <TextView
             android:id="@id/list_item_description"
@@ -51,4 +54,4 @@
             android:text="sdasdsadasdassdasdasdasdas" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
