--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -142,16 +142,36 @@
 
     <style name="text_style_big_gray">
         <item name="android:textSize">20sp</item>
-        <item name="android:textColor">#FF999999</item>
+        <item name="android:textColor">@color/TextColorGray</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="text_style_big">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/TextColorBlack</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
         <item name="android:singleLine">true</item>
+        <item name="android:padding">2dp</item>
     </style>
-
-    <style name="text_style_big_black">
+    
+    <style name="text_style_big_normal_black">
         <item name="android:textSize">20sp</item>
-        <item name="android:textColor">@color/TextColorBlack</item>
+        <item name="android:textColor">@color/text_normal_black</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:padding">2dp</item>
+    </style>
+    
+    <style name="text_style_big_white">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/TextColorWhite</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
@@ -167,6 +187,13 @@
         <item name="android:gravity">left</item>
     </style>
 
+    <style name="text_style_small_normal_black">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/text_normal_black</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">left</item>
+    </style>
     <style name="text_style_small_gray">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/TextColorGray</item>
@@ -175,10 +202,44 @@
         <item name="android:gravity">left</item>
     </style>
 
-
+	 <style name="text_style_small_white">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/TextColorWhite</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">left</item>
+    </style>
     <style name="text_style_large_gray">
         <item name="android:textSize">22sp</item>
         <item name="android:textColor">@color/TextColorGray</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">left</item>
+    </style>
+    <style name="text_style_large_normal_black">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@color/text_normal_black</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">left</item>
+    </style>
+     <style name="text_style_large">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@color/TextColorBlack</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">left</item>
+    </style>
+     <style name="text_style_large_white">
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@color/TextColorWhite</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">left</item>
+    </style>
+    <style name="text_style_medium_normal_black">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/text_normal_black</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">left</item>
@@ -190,20 +251,13 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">left</item>
     </style>
-
-    <style name="text_style_micro_gray">
-        <item name="android:textSize">12sp</item>
-        <item name="android:textColor">@color/TextColorGray</item>
-    </style>
-
-    <style name="text_style_large">
-        <item name="android:textSize">22sp</item>
-        <item name="android:textColor">@color/TextColorBlack</item>
+    <style name="text_style_medium_white">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/TextColorWhite</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">left</item>
     </style>
-
     <style name="text_style_medium">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/TextColorBlack</item>
@@ -212,12 +266,109 @@
         <item name="android:gravity">left</item>
     </style>
 
+    <style name="text_style_micro_gray">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/TextColorGray</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">left</item>
+    </style>
+
+    <style name="text_style_micro_normal_black">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/text_normal_black</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">left</item>
+    </style>
+ 	<style name="text_style_micro_white">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/TextColorWhite</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">left</item>
+    </style>
+
+
     <style name="text_style_micro">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/TextColorBlack</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">left</item>
+    </style>
+    
+    <style name="activity_title">
+        <item name="android:textSize">18.0sp</item>
+        <item name="android:textColor">@color/TextColorBlack</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    
+    
+    
+    
+    <!-- ABCDEFG..名字排序相关style -->
+      <style name="MMListItem">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:paddingLeft">4.0dip</item>
+        <item name="android:paddingTop">4.0dip</item>
+        <item name="android:paddingRight">4.0dip</item>
+        <item name="android:paddingBottom">4.0dip</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="MMFriendListItem">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:paddingLeft">16.0dip</item>
+        <item name="android:paddingTop">6.0dip</item>
+        <item name="android:paddingRight">6.0dip</item>
+        <item name="android:paddingBottom">6.0dip</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="MMListCatalog">
+        <item name="android:textSize">14.0dip</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#ff595c61</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:background">#ffced2d7</item>
+        <item name="android:paddingLeft">10.0dip</item>
+        <item name="android:paddingTop">2.0dip</item>
+        <item name="android:paddingBottom">2.0dip</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="ChoicePreferenceButton">
+        <item name="android:textColor">#ff595c61</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:button">@null</item>
+        <item name="android:minWidth">60.0dip</item>
+    </style>
+    <style name="MMFontTitleInList">
+        <item name="android:textSize">16.0dip</item>
+        <item name="android:textColor">#ff595c61</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:singleLine">true</item>
+    </style>
+    <style name="MMFontTipInList">
+        <item name="android:textSize">14.0dip</item>
+        <item name="android:textColor">#ffffffff</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:singleLine">true</item>
     </style>
 
 </resources>
