--- a/res/layout/reply_item.xml
+++ b/res/layout/reply_item.xml
@@ -4,77 +4,131 @@
     android:layout_height="match_parent"
     android:background="#eeeeee"
     android:descendantFocusability="blocksDescendants"
-    android:orientation="vertical"
-    android:padding="5dp" >
+    android:orientation="vertical" >
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="5dp" >
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:orientation="horizontal" >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-            <ImageView
-                android:id="@+id/avatar"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:contentDescription="@string/app_name" />
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:orientation="horizontal" >
 
-            <TextView
-                android:id="@+id/nickname"
+                <ImageView
+                    android:id="@+id/avatar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="5dp"
+                    android:contentDescription="@string/app_name" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp" >
+
+                    <!-- 昵称 -->
+
+                    <TextView
+                        android:id="@+id/nickname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:textColor="#aaa"
+                        android:textSize="15sp" />
+                    <!-- 发布位置 -->
+
+                    <TextView
+                        android:id="@+id/location"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:textColor="#aaa"
+                        android:textSize="12sp" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#aaa"
-                android:textSize="15sp" />
-        </LinearLayout>
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:orientation="vertical"
+                android:padding="2dp" >
+
+                <TextView
+                    android:id="@+id/go_reply"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top"
+                    android:background="@drawable/reply_to_reply"
+                    android:clickable="true"
+                    android:gravity="right" />
+
+                <TextView
+                    android:id="@+id/reply_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:textColor="#000000"
+                    android:textSize="12sp" />
+            </LinearLayout>
+        </RelativeLayout>
 
         <TextView
-            android:id="@+id/reply_time"
+            android:id="@+id/content"
+            style="@style/text_style_medium"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="20dp"
-            android:textColor="#000000"
-            android:textSize="12sp" />
-    </RelativeLayout>
+            android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/content"
-        style="@style/text_style_medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <FrameLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-
-        <!-- 问题图片 -->
-
-        <scu.android.ui.MGridView
-            android:id="@+id/photos_view"
+        <FrameLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:horizontalSpacing="2dp"
-            android:numColumns="3"
-            android:stretchMode="columnWidth"
-            android:verticalSpacing="2dp" >
-        </scu.android.ui.MGridView>
+            android:layout_height="wrap_content" >
 
-        <ImageButton
-            android:id="@+id/audio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|bottom"
-            android:layout_margin="5dp"
-            android:contentDescription="@string/app_name"
-            android:focusable="false"
-            android:src="@drawable/voice_button"
-            android:visibility="invisible" />
-    </FrameLayout>
+            <!-- 问题图片 -->
+
+            <scu.android.ui.MGridView
+                android:id="@+id/photos_view"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:horizontalSpacing="2dp"
+                android:numColumns="3"
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="2dp" >
+            </scu.android.ui.MGridView>
+
+            <ImageButton
+                android:id="@+id/audio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|bottom"
+                android:layout_margin="5dp"
+                android:contentDescription="@string/app_name"
+                android:focusable="false"
+                android:src="@drawable/voice_button"
+                android:visibility="invisible" />
+        </FrameLayout>
+    </LinearLayout>
+
+    <scu.android.ui.MListView
+        android:id="@+id/replys"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:cacheColorHint="#00000000"
+        android:divider="#ffb4b4b4"
+        android:dividerHeight="1.0px"
+        android:fadingEdge="none"
+        android:fastScrollEnabled="false"
+        android:footerDividersEnabled="true"
+        android:headerDividersEnabled="true"
+        android:smoothScrollbar="true" >
+    </scu.android.ui.MListView>
 
 </LinearLayout>
